cluster/apps/selfhosted/freshrss/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: freshrss
  namespace: default
  labels:
    app.kubernetes.io/name: freshrss
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: freshrss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: freshrss
    spec:
      securityContext:
        # container requires root to launch and then run as node user 1000
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: false
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL

      volumes:
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-data
        - name: freshrss-config-custom
          configMap:
            name: freshrss-config-custom
        - name: freshrss-config-user-custom
          configMap:
            name: freshrss-config-user-custom

      containers:
        - name: freshrss
          image: freshrss/freshrss:1.20.2-alpine
          imagePullPolicy: IfNotPresent
          # https://github.com/FreshRSS/FreshRSS/tree/edge/Docker#docker-compose
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
              subPath: data
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/extensions
              subPath: extensions
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
