cluster/apps/selfhosted/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: freshrss
  type: ClusterIP
